@@ -470,8 +470,14 @@ user defined values.
   <tr>
     <td vAlign=top>token</td>
     <td vAlign=top>User defined String.</td>
-    <td vAlign=top>User defined search String</td>
+    <td vAlign=top>User defined search String.</td>
     <td vAlign=top align="center">Yes</td>
+  </tr>
+  <tr>
+    <td vAlign=top>propertiesfile</td>
+    <td vAlign=top>Not applicable.</td>
+    <td vAlign=top>Properties file to take tokens from.</td>
+    <td vAlign=top align="center">No</td>
   </tr>
 </table>
 <p>
@@ -501,6 +507,18 @@ Convenience method:
     &lt;/replacetokens&gt;
   &lt;/filterchain&gt;
 &lt;/loadfile&gt;
+</pre></blockquote>
+
+This will treat each properties file entry in sample.properties as a token/key pair :
+<blockquote><pre>
+&lt;loadfile srcfile=&quot;${src.file}&quot; property=&quot;${src.file.replaced}&quot;&gt;
+  &lt;filterchain&gt;
+    &lt;filterreader classname=&quot;org.apache.tools.ant.filters.ReplaceTokens&quot;&gt;
+      &lt;param type=&quot;propertiesfile&quot; value=&quot;sample.properties&quot;/&gt;
+    &lt;/filterreader&gt;
+  &lt;/filterchain&gt;
+&lt;/loadfile&gt;
+&lt;/filterchain&gt;
 </pre></blockquote>
 
 <h3><a name="stripjavacomments">StripJavaComments</a></h3>
