@@ -26,7 +26,7 @@ import org.apache.tools.ant.util.FileUtils;
 /**
  */
 public class ReplaceTokensTest extends BuildFileTest {
-    
+
     private static final FileUtils FILE_UTILS = FileUtils.getFileUtils();
 
     public ReplaceTokensTest(String name) {
@@ -45,6 +45,13 @@ public class ReplaceTokensTest extends BuildFileTest {
         executeTarget("testReplaceTokens");
         File expected = FILE_UTILS.resolveFile(getProject().getBaseDir(),"expected/replacetokens.test");
         File result = FILE_UTILS.resolveFile(getProject().getBaseDir(),"result/replacetokens.test");
+        assertTrue(FILE_UTILS.contentEquals(expected, result));
+    }
+
+    public void testReplaceTokensPropertyFile() throws IOException {
+        executeTarget("testReplaceTokensPropertyFile");
+        File expected = FILE_UTILS.resolveFile(getProjectDir(), "expected/replacetokens.test");
+        File result = FILE_UTILS.resolveFile(getProjectDir(), "result/replacetokensPropertyFile.test");
         assertTrue(FILE_UTILS.contentEquals(expected, result));
     }
 
